--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,14 +6,14 @@
     //   "prettier/@typescript-eslint",
       "plugin:prettier/recommended"
     ],
-    "plugins": ["react", "@typescript-eslint", "prettier"],
+    "plugins": ["react", "@typescript-eslint"],
     "env": {
       "browser": true,
       "jasmine": true,
       "jest": true
     },
-    "rules": {
-      "prettier/prettier": ["error", { "singleQuote": true }]
+    "rules": {   
+        "no-tabs": ["error", { "allowIndentationTabs": true }]
     },
     "settings": {
       "react": {
