eslint prettier config fix

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,23 +3,27 @@
       "eslint:recommended",
       "plugin:react/recommended",
       "plugin:@typescript-eslint/recommended",
-    //   "prettier/@typescript-eslint",
       "plugin:prettier/recommended"
     ],
-    "plugins": ["react", "@typescript-eslint"],
+    "parserOptions": {
+      "ecmaFeatures": {
+          "jsx": true
+      },
+      "ecmaVersion": 12,
+      "sourceType": "module"
+  },
+    "plugins": ["react"],
     "env": {
       "browser": true,
       "jasmine": true,
       "jest": true
     },
     "rules": {   
-        "no-tabs": ["error", { "allowIndentationTabs": true }]
     },
     "settings": {
       "react": {
         "pragma": "React",
         "version": "detect"
       }
-    },
-    "parser": "@typescript-eslint/parser"
+    }
   }
