--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "build": "react-scripts build",
     "start-prod": "serve -s build",
     "test": "react-scripts test",
+    "lint": "eslint --fix .",
     "eject": "react-scripts eject",
     "lint:fix": "eslint './src/**/*.{ts,tsx}'",
     "postinstall": "tsc"
